# Table_Organizer_Robot_Arm

./: .gitignore  LICENSE  README.md  configure_motor.py  control_configs.py  object_positions.json  reference_yolo_out_format.txt
Images/: esp32mount.stl
LeRobot/: HuggingFace_token.txt  configure_motor.py  record_local.yaml
LeRobot/.cache/calibration/so100/: main_follower.json  main_leader.json
LeRobot/Modified Files/training/: control_robot.py
LeRobot/lerobot/scripts/: augment_dataset_with_yolo.py  yolo_display.py
LeRobot/training/: object_positions.json
Other Scripts/: file_manage.py  label_script.py  random_script.py  tcp_udp_photo.py
PC Scripts/: object_positions.json  passing_data.py  yolo_display.py
Report_VideoDemo/: Link to video Demo.txt
Testing Components Scripts/: main.py  main_camera.py  main_coord.py  random_script.py  stream.py
esp32-HighRes/: CMakeLists.txt  main.c  sdkconfig
esp32-HighRes/main/: main.c
esp32-S3/: CMakeLists.txt  sdkconfig
esp32-S3/main/: CMakeLists.txt  camera_task.c  camera_task.h  coordinate_task.h  idf_component.yml  main.c  wifi_task.c  wifi_task.h
esp32-v2/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
esp32-v2/main/: CMakeLists.txt  camera_httpd.c  camera_httpd.h  coordinate_task.c  coordinate_task.h  cv_task.c  cv_task.h  main.c
esp32-v3/: CMakeLists.txt  main.c
fine-tuning/: data.yaml  fine_tune.py
fine-tuning/dataset/train/: labels.cache
fine-tuning/dataset/valid/: labels.cache
fine-tuning/fine-tuning/fine_tuned_yolov5n/: args.yaml  results.csv
(+254 files in other folders)
